[package]
authors = ["Robert Günzler <r@gnzler.io>"]
description = "Juniper GraphQL integration with tower_web"
documentation = "https://docs.rs/juniper_tower"
license = "MIT"
name = "juniper_tower"
readme = "README.md"
repository = "https://github.com/robertgzr/juniper_tower"
version = "0.1.1"
edition = "2018"

[dependencies]
http = "0.1.13"
serde = "1.0.79"
serde_json = "1.0.31"
tokio = "0.1.11"
tower-web = { version = "0.3.3", default-features = false }
juniper = { version = "0.10.0", default-features = false, features = ["serde_json"] }

[dev-dependencies.juniper]
features = ["expose-test-schema"]
version = "0.10.0"
