[package]
authors = ["Robert Günzler <r@gnzler.io>"]
description = "Juniper GraphQL integration with tower_web"
documentation = "https://docs.rs/juniper_tower"
license = "MIT"
name = "juniper_tower"
readme = "README.md"
repository = "https://github.com/robertgzr/juniper_tower"
version = "0.2.0"
edition = "2018"

[dependencies]
http = "0.2.8"
serde = "1.0.79"
serde_json = "1.0.31"
tokio = "1.20.1"
tower-web = { version = "0.3.7", default-features = false }
juniper = { version = "0.15.10", default-features = false, features = ["serde_json"] }

[dev-dependencies]
serde_json = "1.0.39"

[dev-dependencies.juniper]
features = ["expose-test-schema"]
version = "0.15.10"
